@@ -39,8 +39,27 @@ application {
     mainClass = 'hexlet.code.App'
 }
 
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+}
 
 run {
+    jvmArgs += '--enable-preview'
     standardInput = System.in
+}
+
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["-Xlint:preview"]
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(23)
+    }
 }
 
